--- a/src/web/registered.html
+++ b/src/web/registered.html
@@ -5,7 +5,7 @@
     <title>Registerd. Yay</title>
 </head>
 <body>
-<h1><code>{{name}}</code> you have successfully registered</h1>
+<h1><code>{{name}}</code> you have successfully registered with the email <code>{{mail}}</code></h1>
 <a href="/login">Login</a>
 <br><br>
 <a href="/">Return to home</a>
